--- a/notebooks/DownloadEarthExplorer.ipynb
+++ b/notebooks/DownloadEarthExplorer.ipynb
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def downloadBulk(lat,lon,radius,startDate,endDate,usr,psw,batchSize,productType = \"STANDARD\", maxDownload = 1, driverPath = '/home/adrianoii/Repo/DesmateSeletivo/chromedriver',downloadPath ='/home/adrianoii/Repo/DesmateSeletivo'):\n",
+    "def downloadBulk(lat,lon,radius,startDate,endDate,usr,psw,batchSize,productType = \"STANDARD\", maxDownload = 1, driverPath = '/PATH_REPO/DesmateSeletivo/chromedriver',downloadPath ='/PATH_REPO/DesmateSeletivo'):\n",
     "    while (apiKey := login(usr,psw)) == None:\n",
     "           print(\"Erro ao logar tentando novamente\")\n",
     "    scenes = sceneSearch(apiKey,(lat,lon),radius,startDate,endDate)\n",
@@ -763,8 +763,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/run/media/adrianoii/SEAGATE 1TB/ImagensSentinel2/md5sumNovo.txt') as o, \\\n",
-    "     open('/run/media/adrianoii/SEAGATE 1TB/ImagensSentinel2/md5sumNovoHd.txt') as h :\n",
+    "with open('/run/media/SEAGATE 1TB/ImagensSentinel2/md5sumNovo.txt') as o, \\\n",
+    "     open('/run/media/SEAGATE 1TB/ImagensSentinel2/md5sumNovoHd.txt') as h :\n",
     "    i = 0\n",
     "    for line in o:\n",
     "        i +=1\n",
